
        * Toolbar : Add the reorder feature when the more panel is shown.
          After the item is long-pressed, it can be moved.

2012-06-14  Michael Bouchaud

	* Add an enum to Elm_Calendar_Mark_Repeat_Type:
	ELM_CALENDAR_LAST_DAY_OF_MONTH

2012-06-15  Michael Bouchaud

	* elm_progressbar: elm_progressbar_format_function_set to add a callback
	function to format the unit string.

2012-06-16  Davide Andreoli

	* elm_map: add elm_map_overlay_del_cb_set to be notify when
	an overlay is deleted.

2012-06-21  Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed a bug with decorate all mode + tree effect. Delete tree
	effect animator and set the effect mode to none when decorate all mode is
	set.

2012-06-23  Daniel Willmann

        * elm_progressbar: Add "changed" signal to be emitted when the value
        is changed.

2012-06-25  Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed tree expand bug. Check item type when an item is requested
	to be expanded/contracted.

2012-06-25  Carsten Haitzler (The Rasterman)

	* add elm_cnp_selection_loss_callback_set() so you know when you
        lose a selection as a client
        * improve robustness of cnp to track target object deletions.

2012-06-26  Shinwoo Kim (kimcinoo)

	* Use Edje to enable accessibility on TEXTBLOCK.

2012-06-27 Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed homogeneous mode bug with ELM_OBJECT_SELECT_MODE_DISPLAY_ONLY item. Now it calculates display only item size correctly.

2012-06-29 Artem Popov

	* Add support for a new toolbar style with icon and text
        aligned in center. "item_centered".

2012-06-30  Shinwoo Kim (kimcinoo)

	* Add elm_config_access_set/get() to allow for a config tool to enable
        to diasbale access mode.
        * Add access highlight infra

2012-06-30 Artem Popov

	* Fix panel theme_hook handling for scaling

2012-07-01 Gustavo Sverzut Barbieri (k-s)

	* Add and use elm_widget_item_widget_get()
	* Fix elm_segment_control to not abuse user's data from item.