@@ -247,11 +247,15 @@
         to diasbale access mode.
         * Add access highlight infra
 
-2012-06-30 Artem Popov
+2012-06-30  Artem Popov
 
 	* Fix panel theme_hook handling for scaling
 
-2012-07-01 Gustavo Sverzut Barbieri (k-s)
+2012-07-01  Gustavo Sverzut Barbieri (k-s)
 
 	* Add and use elm_widget_item_widget_get()
 	* Fix elm_segment_control to not abuse user's data from item.
+
+2012-07-3  Cedric Bail
+
+	* Initialize Emotion when necessary.
